force-app/main/default/objects/Weekly_Department_PL__c/Weekly_Department_PL__c.object-meta.xml
<CustomObject>
    <description>Daily/weekly P&amp;L data by department - 週間部門別PL</description>
    <label>週間部門別PL</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>PL番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>週間部門別PL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>