force-app/main/default/objects/Weekly_Department_PL__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>値引金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>