force-app/main/default/objects/Weekly_Department_PL__c/fields/Ending_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Ending_Inventory__c</fullName>
    <label>期末在庫</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>