force-app/main/default/objects/Weekly_Department_PL__c/fields/Gross_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Margin__c</fullName>
    <label>荒利率</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>