force-app/main/default/objects/Weekly_Department_PL__c/fields/Inventory_Days__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Days__c</fullName>
    <label>在庫日数</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>