force-app/main/default/objects/Weekly_Department_PL__c/fields/Margin_Budget__c.field-meta.xml
<CustomField>
    <fullName>Margin_Budget__c</fullName>
    <label>率予算</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>