force-app/main/default/objects/Weekly_Department_PL__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>期</label>
    <length>20</length>
    <type>Text</type>
</CustomField>