force-app/main/default/objects/Weekly_Department_PL__c/fields/Productivity_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Per_Hour__c</fullName>
    <label>人時生産性</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>