force-app/main/default/objects/Weekly_Department_PL__c/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <label>仕入高</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>