force-app/main/default/objects/Weekly_Department_PL__c/fields/Purchase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Rate__c</fullName>
    <label>値入率</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>