force-app/main/default/objects/Weekly_Department_PL__c/fields/Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Amount__c</fullName>
    <label>売上高</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>