force-app/main/default/objects/Weekly_Department_PL__c/fields/Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ratio__c</fullName>
    <label>構成比</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>