force-app/main/default/objects/Weekly_Department_PL__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>店舗</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>週間部門別PL</relationshipLabel>
    <relationshipName>Weekly_Department_PLs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>