force-app/main/default/objects/Weekly_Department_PL__c/fields/Unknown_Loss__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Loss__c</fullName>
    <label>不明ロス</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>