force-app/main/default/objects/Weekly_Department_PL__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <label>乖離</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>