force-app/main/default/objects/Weekly_Department_PL__c/fields/Waste_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waste_Amount__c</fullName>
    <label>廃棄金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>