force-app/main/default/objects/Weekly_Department_PL__c/fields/Waste_Rate__c.field-meta.xml
<CustomField>
    <fullName>Waste_Rate__c</fullName>
    <label>廃棄率</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>