force-app/main/default/objects/Weekly_Department_PL__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>週</label>
    <length>20</length>
    <type>Text</type>
</CustomField>